# pyproject_tutorial

./: .editorconfig  .flake8  .pre-commit-config.yaml  poetry.toml  pyproject.toml
pyproject_tutorial/: main.py
